[gd_scene load_steps=12 format=3 uid="uid://ds16gakjru6i2"]

[ext_resource type="Script" path="res://scenes/scripts/Player.gd" id="1_cphtg"]
[ext_resource type="Texture2D" uid="uid://owj1uocq43nu" path="res://resources/sprites/player.png" id="2_8pkp4"]
[ext_resource type="Texture2D" uid="uid://cee0yeuof1chc" path="res://resources/sprites/hand.png" id="3_wbl83"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rbmbu"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d6i1s"]

[sub_resource type="Animation" id="Animation_s55xl"]
resource_name = "idle"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 4, 7]
}

[sub_resource type="Animation" id="Animation_3c7aw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bprw3"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_i5buy"]
resource_name = "jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vcm5"]
_data = {
"RESET": SubResource("Animation_3c7aw"),
"idle": SubResource("Animation_s55xl"),
"jump": SubResource("Animation_i5buy"),
"walk": SubResource("Animation_bprw3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vwso3"]
radius = 15.0

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
motion_mode = 1
floor_block_on_wall = false
script = ExtResource("1_cphtg")

[node name="BodySprite" type="Sprite2D" parent="."]
texture = ExtResource("2_8pkp4")
hframes = 9

[node name="LeftHand" type="Sprite2D" parent="."]
position = Vector2(-16, 8)
texture = ExtResource("3_wbl83")
flip_h = true
hframes = 8
frame = 7

[node name="RightHand" type="Sprite2D" parent="."]
position = Vector2(16, 8)
texture = ExtResource("3_wbl83")
hframes = 8

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rbmbu")

[node name="DistanceChecker" type="ShapeCast2D" parent="."]
shape = SubResource("CircleShape2D_d6i1s")
target_position = Vector2(50, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5vcm5")
}

[node name="JumpChecker" type="ShapeCast2D" parent="."]
shape = SubResource("CircleShape2D_vwso3")
target_position = Vector2(0, 12)

[node name="Area2D" type="Area2D" parent="."]
